# AgentTransferProtocol

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/: architecture.md  configuration.md  dns-setup.md  index.md  quickstart.md  sdk.md  security.md
src/atp/: __init__.py  __main__.py  skill.md
src/atp/cli/: __init__.py  agent.py  dns.py  inspect.py  keys.py  main.py  recv.py  send.py  server.py  skill.py  status.py
src/atp/client/: __init__.py  client.py  transport.py
src/atp/core/: canonicalize.py  errors.py  identity.py  message.py  signature.py
src/atp/discovery/: dns.py  local.py
src/atp/security/: atk.py  ats.py  replay.py  tls.py
src/atp/server/: app.py  config.py  delivery.py  metrics.py  queue.py  routes.py
src/atp/storage/: agents.py  config.py  keys.py  messages.py
tests/: test_agents.py  test_atk.py  test_ats.py  test_canonicalize.py  test_cli.py  test_client.py  test_config.py  test_discovery.py  test_identity.py  test_keys.py  test_message.py  test_messages.py  test_metrics.py  test_replay.py  test_server.py  test_signature.py  test_tls.py
